[profile.release]
codegen-units=1
# Tell `rustc` to optimize for small code size
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true


[workspace]
members = [
    "common",
    "examples/nft",
    "finance",
    "locked_token",
    "roke_token",
    "streaming",
    "tests",
]
