[package]
name = "tests"
version = "1.0.0"
authors = ["Alex Kouprin <hello@kikimora.tech>"]
edition = "2021"

[dev-dependencies]
near-contract-standards = "=4.0.0-pre.9"
near-sdk = "=4.0.0-pre.9"
near-sdk-sim = "=4.0.0-pre.9"
near-units = "0.2.0"
#near-primitives = "0.5.0"
#serde_json = "1.0"
anyhow = "1.0.64"
tokio = { version = "1.14", features = ["full"] }
uint = { version = "0.9.3", default-features = false }
workspaces = "0.6.0"

[dependencies]
common = { path = "../common" }
finance = { path = "../finance" }
streaming = { path = "../streaming" }
locked-token = { path = "../locked_token" }
roke-token = { path = "../roke_token" }
nft-roketo = { path = "../examples/nft" }
